hard-gists/5201689/run.log
=== Docker Run Log for 5201689 ===
Started at: Mi 29. Okt 15:27:42 CET 2025

[2025-10-29 15:27:43] START: Running container for 5201689
[2025-10-29 15:27:43] SUCCESS: Container ffb8a05dfa3198083619433140a936ac64432e6a6be9fc2fd7b3519566a26714 started for 5201689
=== Container logs for 5201689 ===
  File "/snippet.py", line 31
    print 'Failed open file'
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5201689 ===
[2025-10-29 15:27:45] INFO: Container ffb8a05dfa3198083619433140a936ac64432e6a6be9fc2fd7b3519566a26714 has stopped
